--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
@@ -1,1 +1,169 @@
-.header-border{border-top:2px solid #dfdfdf}.nav-border{border-right:1px solid #98999b}.gradient{background:-webkit-linear-gradient(#f2f2f2, #d9d9d9);background:-o-linear-gradient(#f2f2f2, #d9d9d9);background:-moz-linear-gradient(#f2f2f2, #d9d9d9);background:linear-gradient(#f2f2f2, #d9d9d9)}.gradient-nav{background:-webkit-linear-gradient(#d5d6d8, #bbbcbf);background:-o-linear-gradient(#d5d6d8, #bbbcbf);background:-moz-linear-gradient(#d5d6d8, #bbbcbf);background:linear-gradient(#d5d6d8, #bbbcbf)}.wrapper-size{margin:0 auto;width:960px;max-width:100%}body{background-color:#fff;color:#111}#header{color:#2d66cf;padding:14px 0 0 0;border-top:2px solid #dfdfdf;background:-webkit-linear-gradient(#f2f2f2, #d9d9d9);background:-o-linear-gradient(#f2f2f2, #d9d9d9);background:-moz-linear-gradient(#f2f2f2, #d9d9d9);background:linear-gradient(#f2f2f2, #d9d9d9)}#accessibility{font-size:.78em}#accessibility a{color:#2d66cf}#accessibility a span{background:#5584da;color:#f2f2f2}#portal-siteactions{border-bottom:1px dotted #2d66cf}#portal-siteactions a,#portal-siteactions a:hover,#portal-language a,#portal-language a:hover{color:#2d66cf !important}#header h1,#header a{color:#2d66cf}#portal-title{margin-bottom:25px}nav{background:-webkit-linear-gradient(#d5d6d8, #bbbcbf);background:-o-linear-gradient(#d5d6d8, #bbbcbf);background:-moz-linear-gradient(#d5d6d8, #bbbcbf);background:linear-gradient(#d5d6d8, #bbbcbf)}nav ul{line-height:20px;padding:5px 0;margin:0 auto;width:960px;max-width:100%}nav li{margin-right:10px;padding-right:10px;border-right:1px solid #98999b}#main{margin:0 auto;width:960px;max-width:100%;background:#fff}.ministerios{background:#f2f2f2}.ministerios ul{margin:0 auto;max-width:960px;width:100%}.ministerios li{width:29%;float:left;margin:2%;text-align:center}.ministerios a{color:#0042b2}.ministerios a span:last-child{display:block;font-weight:bold}#footer .footer-logos{background:#0042b2}#social-icons a,.item-central .link-videos,.item-central .link-audios,.item-central .link-infograficos,.item-central .link-publicacoes,.item-central .link-fotos,.item-central .link-aplicativos,#header input.searchButton{background-image:url("/img/sprite.png")}#content .relatar-erros a{background:url("/img/icon-reportar-erros.png") no-repeat}#content .summary-view-icon [class*="icon"]{background-image:url("/img/summary-view-icons-sprite.png")}@media only screen and (min-width:320px) and (max-width:768px){.menuTrigger{background:#dbdce1 url("/img/bg-menu-mobile.png") top right no-repeat}.portlet-static-centrais-de-conteudos .portletHeader,.portletNavigationTree .portletHeader{background:#edeff1 url("/img/portlet-header.gif") no-repeat 96% center}.portletNavigationTree .portletHeader.ativo{background:url("/img/portlet-header-expanded.gif") no-repeat 96% center}}@media only screen and (min-width:320px) and (max-width:480px){#header #portal-searchbox .searchButton{background:url("/img/search-button-30px.png") no-repeat}}
+.header-border {
+  border-top: 2px solid #dfdfdf;
+}
+.nav-border {
+  border-right: 1px solid #98999b;
+}
+.gradient {
+  background: -webkit-linear-gradient(#f2f2f2, #d9d9d9);
+  /* For Safari */
+  background: -o-linear-gradient(#f2f2f2, #d9d9d9);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#f2f2f2, #d9d9d9);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#f2f2f2, #d9d9d9);
+  /* Standard syntax (must be last) */
+}
+.gradient-nav {
+  background: -webkit-linear-gradient(#d5d6d8, #bbbcbf);
+  /* For Safari */
+  background: -o-linear-gradient(#d5d6d8, #bbbcbf);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#d5d6d8, #bbbcbf);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#d5d6d8, #bbbcbf);
+  /* Standard syntax (must be last) */
+}
+.wrapper-size {
+  margin: 0 auto;
+  width: 960px;
+  max-width: 100%;
+}
+body {
+  background-color: #ffffff;
+  color: #111111;
+}
+#header {
+  color: #2d66cf;
+  padding: 14px 0 0 0;
+  border-top: 2px solid #dfdfdf;
+  background: -webkit-linear-gradient(#f2f2f2, #d9d9d9);
+  /* For Safari */
+  background: -o-linear-gradient(#f2f2f2, #d9d9d9);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#f2f2f2, #d9d9d9);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#f2f2f2, #d9d9d9);
+  /* Standard syntax (must be last) */
+}
+#accessibility {
+  font-size: 0.78em;
+}
+#accessibility a {
+  color: #2d66cf;
+}
+#accessibility a span {
+  background: #5584da;
+  color: #f2f2f2;
+}
+#portal-siteactions {
+  border-bottom: 1px dotted #2d66cf;
+}
+#portal-siteactions a,
+#portal-siteactions a:hover,
+#portal-language a,
+#portal-language a:hover {
+  color: #2d66cf !important;
+}
+#header h1,
+#header a {
+  color: #2d66cf;
+}
+#portal-title {
+  margin-bottom: 25px;
+}
+nav {
+  background: -webkit-linear-gradient(#d5d6d8, #bbbcbf);
+  /* For Safari */
+  background: -o-linear-gradient(#d5d6d8, #bbbcbf);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#d5d6d8, #bbbcbf);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#d5d6d8, #bbbcbf);
+  /* Standard syntax (must be last) */
+}
+nav ul {
+  line-height: 20px;
+  padding: 5px 0;
+  margin: 0 auto;
+  width: 960px;
+  max-width: 100%;
+}
+nav li {
+  margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid #98999b;
+}
+#main {
+  margin: 0 auto;
+  width: 960px;
+  max-width: 100%;
+  background: #ffffff;
+}
+div.position-0 {
+  margin-left: -100%;
+}
+div.width-full {
+  width: 100%;
+}
+.ministerios {
+  background: #f2f2f2;
+}
+.ministerios ul {
+  margin: 0 auto;
+  max-width: 960px;
+  width: 100%;
+}
+.ministerios li {
+  width: 29%;
+  float: left;
+  margin: 2%;
+  text-align: center;
+}
+.ministerios a {
+  color: #0042b2;
+}
+.ministerios a span:last-child {
+  display: block;
+  font-weight: bold;
+}
+#footer .footer-logos {
+  background: #0042b2;
+}
+/* icones de redes sociais */
+#social-icons a,
+.item-central .link-videos,
+.item-central .link-audios,
+.item-central .link-infograficos,
+.item-central .link-publicacoes,
+.item-central .link-fotos,
+.item-central .link-aplicativos,
+#header input.searchButton {
+  background-image: url("/img/sprite.png");
+}
+/* icone do botão de relatar erros */
+#content .relatar-erros a {
+  background: url("/img/icon-reportar-erros.png") no-repeat;
+}
+/* Summary view */
+#content .summary-view-icon [class*="icon"] {
+  background-image: url("/img/summary-view-icons-sprite.png");
+}
+/* Responsivo */
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  .menuTrigger {
+    background: #dbdce1 url("/img/bg-menu-mobile.png") top right no-repeat;
+  }
+  .portlet-static-centrais-de-conteudos .portletHeader,
+  .portletNavigationTree .portletHeader {
+    background: #edeff1 url("/img/portlet-header.gif") no-repeat 96% center;
+  }
+  .portletNavigationTree .portletHeader.ativo {
+    background: url("/img/portlet-header-expanded.gif") no-repeat 96% center;
+  }
+}
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+  #header #portal-searchbox .searchButton {
+    background: url("/img/search-button-30px.png") no-repeat;
+  }
+}
