--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -89,7 +89,6 @@ body {
 nav {
   .gradient-nav
 }
-
 nav ul {
   line-height: 20px;
   padding: 5px 0;
@@ -100,12 +99,16 @@ nav li {
   padding-right: 10px;
   .nav-border;
 }
-
 #main {
   .wrapper-size;
   background: @main-bg;
 }
-
+div.position-0 {
+margin-left: -100%;
+}
+div.width-full {
+width: 100%;
+}
 .ministerios {
   background: @header;
 }
