Corde fundo do tile de texto quando existe imagem de fundo

--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
@@ -130,6 +130,11 @@ div.width-full {
 #footer .footer-logos {
   background: #0042b2;
 }
+/* tiles */
+.cover-background-image .cover-richtext-tile {
+  background: #ffffff;
+  outline: 10px solid #ffffff;
+}
 /* icones de redes sociais */
 #social-icons a,
 .item-central .link-videos,
