--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -134,6 +134,12 @@ width: 100%;
   background: @footer;
 }
 
+/* tiles */
+.cover-background-image .cover-richtext-tile {
+  background: @main-bg;
+  outline: 10px solid @main-bg;
+}
+
 /* icones de redes sociais */
 #social-icons a,
 /* central de conteudo */
