--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -81,7 +81,10 @@ body {
 #portal-language a:hover { color: @header-text !important; }
 #header h1,
 #header a {
-  color: @header-link;
+  color: @header-link !important;
+}
+#logo a, #logo #portal-title {
+  color: @header-link !important;
 }
 #portal-title {
   margin-bottom: 25px;
