Ajustes gerais de estilo

--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
@@ -119,7 +119,7 @@ div.width-full {
   width: 100%;
 }
 .ministerios li {
-  width: 29%;
+  width: 21%;
   float: left;
   margin: 2%;
   text-align: center;
@@ -130,6 +130,9 @@ div.width-full {
 .ministerios a span:last-child {
   display: block;
   font-weight: bold;
+}
+#footer {
+  padding: 0 0 20px 0 !important;
 }
 #footer .footer-logos {
   background: #0042b2;
@@ -158,8 +161,23 @@ div.width-full {
 #content .summary-view-icon [class*="icon"] {
   background-image: url("/img/summary-view-icons-sprite.png");
 }
+/* Contraste */
+nav,
+nav ul,
+.ministerios,
+.cover-background-image .cover-richtext-tile,
+.cover-background-image {
+  background: none repeat scroll 0 0 #000 !important;
+  color: #fff !important;
+}
 /* Responsivo */
 @media only screen and (min-width: 320px) and (max-width: 768px) {
+  .cover-background-image {
+    background: #fff;
+  }
+  .spacer-tile {
+    height: auto !important;
+  }
   .menuTrigger {
     background: #dbdce1 url("/img/bg-menu-mobile.png") top right no-repeat;
   }
