--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
@@ -86,6 +86,23 @@ nav {
   background: linear-gradient(#d5d6d8, #bbbcbf);
   /* Standard syntax (must be last) */
 }
+#portal-globalnav {
+  clear: both;
+  font-size: 1em;
+  background: transparent;
+  margin: auto;
+}
+#portal-globalnav li a {
+  display: inline;
+  padding: 0;
+  background: transparent;
+  border-right: 0;
+}
+#portal-globalnav .selected a,
+#portal-globalnav a:hover,
+#portal-globalnav .selected a:hover {
+  background: transparent;
+}
 nav ul {
   line-height: 20px;
   padding: 5px 0;
@@ -162,11 +179,11 @@ div.width-full {
   background-image: url("/img/summary-view-icons-sprite.png");
 }
 /* Contraste */
-nav,
-nav ul,
-.ministerios,
-.cover-background-image .cover-richtext-tile,
-.cover-background-image {
+.contraste nav,
+.contraste nav ul,
+.contraste .ministerios,
+.contraste .cover-background-image .cover-richtext-tile,
+.contraste .cover-background-image {
   background: none repeat scroll 0 0 #000 !important;
   color: #fff !important;
 }
