--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -112,6 +112,7 @@ nav {
 nav ul {
   line-height: 20px;
   padding: 5px 0;
+  min-height: 18px;
   .wrapper-size;
 }
 nav li {
@@ -200,6 +201,11 @@ width: 100%;
     }
     .spacer-tile {
       height: auto !important;
+    }
+
+    .ministerios li {
+      width: 46%;
+      margin: 2%;
     }
 
     .menuTrigger {
