Ajusta cor do link do header no contraste

--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
@@ -180,6 +180,7 @@ div.width-full {
   background-image: url("/img/summary-view-icons-sprite.png");
 }
 /* Contraste */
+#header a,
 .contraste nav,
 .contraste nav ul,
 .contraste .ministerios,
