Ajusta largura do tile 16 colunas para 100%

--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -130,6 +130,9 @@ margin-left: -100%;
 div.width-full {
 width: 100%;
 }
+div.width-16 {
+width: 100%;
+}
 .ministerios {
   background: @header;
 }
