--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
@@ -128,6 +128,9 @@ div.position-0 {
 div.width-full {
   width: 100%;
 }
+div.width-16 {
+  width: 100%;
+}
 .ministerios {
   background: #f2f2f2;
 }
