--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -120,6 +120,9 @@ nav li {
   padding-right: 10px;
   .nav-border;
 }
+nav li.last-item {
+  border-right: none;
+}
 #main {
   .wrapper-size;
   background: @main-bg;
