Corrige link do header com contraste

--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
@@ -186,7 +186,7 @@ div.width-16 {
   background-image: url("/img/summary-view-icons-sprite.png");
 }
 /* Contraste */
-#header a,
+.contraste #header a,
 .contraste nav,
 .contraste nav ul,
 .contraste .ministerios,
