--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -190,7 +190,7 @@ width: 100%;
 }
 
 /* Contraste */
-#header a,
+.contraste #header a,
 .contraste nav,
 .contraste nav ul,
 .contraste .ministerios,
