Ajausta imagem de fundo no contraste

--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -194,10 +194,23 @@ width: 100%;
 .contraste nav,
 .contraste nav ul,
 .contraste .ministerios,
-.contraste .cover-background-image .cover-richtext-tile,
-.contraste .cover-background-image {
+.contraste .cover-background-image .cover-richtext-tile {
     background: none repeat scroll 0 0 #000 !important;
     color: #fff !important;
+}
+
+.contraste .spacer-tile .hiddenStructure {
+  height: auto;
+  overflow: visible;
+  padding: 1em;
+  margin: 0;
+  width: auto;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.contraste .cover-background-image .cover-richtext-tile {
+  outline: 10px solid #000;
 }
 
 /* Responsivo */
