Ajusta cor do link e margem das colunas

--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
@@ -128,6 +128,9 @@ nav li.last-item {
 div.position-0 {
   margin-left: -100%;
 }
+div.position-5 {
+  margin-left: -65.1%;
+}
 div.width-full {
   width: 100%;
 }
@@ -162,6 +165,9 @@ div.width-16 {
   background: #0042b2;
 }
 /* tiles */
+.tile a {
+  color: #162937 !important;
+}
 .cover-background-image .cover-richtext-tile {
   background: #ffffff;
   padding: 10px;
