--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -130,6 +130,9 @@ nav li.last-item {
 div.position-0 {
   margin-left: -100%;
 }
+div.position-5 {
+    margin-left: -65.1%;
+}
 div.width-full {
   width: 100%;
 }
@@ -165,6 +168,9 @@ div.width-16 {
 }
 
 /* tiles */
+.tile a {
+    color: #162937 !important;
+}
 .cover-background-image .cover-richtext-tile {
   background: @main-bg;
   padding: 10px;
