Ajuste largura de colunas e espaçamentos para capa do tema cinza

--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -131,10 +131,19 @@ div.position-0 {
   margin-left: -100%;
 }
 div.position-5 {
-    margin-left: -65.1%;
+  margin-left: -65.61%;
+}
+div.position-10 {
+  margin-left: -31.2%;
 }
 div.width-full {
   width: 100%;
+}
+div.width-5 {
+  width: 31.2%;
+}
+div.width-10 {
+  width: 65.61%;
 }
 div.width-16 {
   width: 100%;
@@ -169,7 +178,7 @@ div.width-16 {
 
 /* tiles */
 .tile a {
-    color: #162937 !important;
+  color: #162937 !important;
 }
 .cover-background-image .cover-richtext-tile {
   background: @main-bg;
@@ -189,10 +198,10 @@ div.width-16 {
 .cover-background-image .azul-escuro .tile-content,
 .cover-background-image .azul-turquesa .tile-content,
 .cover-background-image .bege .tile-content {
-    background: @main-bg;
-    padding: 15px 5px;
-    margin-top:  -23px;
-    margin-bottom: -24px;
+  background: @main-bg;
+  padding: 15px 5px;
+  margin-top:  -23px;
+  margin-bottom: -24px;
 }
 
 /* Contraste */
@@ -224,7 +233,7 @@ div.width-16 {
 .contraste .azul-escuro .tile-content,
 .contraste .azul-turquesa .tile-content,
 .contraste .bege .tile-content {
-    background: #000;
+  background: #000;
 }
 
 /* Responsivo */
