--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
@@ -129,10 +129,19 @@ div.position-0 {
   margin-left: -100%;
 }
 div.position-5 {
-  margin-left: -65.1%;
+  margin-left: -65.61%;
+}
+div.position-10 {
+  margin-left: -31.2%;
 }
 div.width-full {
   width: 100%;
+}
+div.width-5 {
+  width: 31.2%;
+}
+div.width-10 {
+  width: 65.61%;
 }
 div.width-16 {
   width: 100%;
