--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -115,6 +115,10 @@ nav ul {
   min-height: 18px;
   .wrapper-size;
 }
+#wrapper-barra-brasil ul.list {
+  line-height: 32px !important;
+  width: inherit !important;
+}
 nav li {
   margin-right: 10px;
   padding-right: 10px;
