--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
@@ -76,7 +76,7 @@ body {
 #portal-title {
   margin-bottom: 25px;
 }
-nav {
+#navigation {
   background: -webkit-linear-gradient(#d5d6d8, #bbbcbf);
   /* For Safari */
   background: -o-linear-gradient(#d5d6d8, #bbbcbf);
@@ -103,7 +103,7 @@ nav {
 #portal-globalnav .selected a:hover {
   background: transparent;
 }
-nav ul {
+#navigation ul {
   line-height: 20px;
   padding: 5px 0;
   min-height: 18px;
@@ -115,12 +115,12 @@ nav ul {
   line-height: 32px !important;
   width: inherit !important;
 }
-nav li {
+#navigation li {
   margin-right: 10px;
   padding-right: 10px;
   border-right: 1px solid #98999b;
 }
-nav li.last-item {
+#navigation li.last-item {
   border-right: none;
 }
 #main {
@@ -174,7 +174,7 @@ div.width-16 {
 #footer {
   padding: 0 0 20px 0 !important;
 }
-#footer .footer-logos {
+#wrapper #footer .footer-logos {
   background: #0042b2;
 }
 /* tiles */
@@ -213,8 +213,8 @@ div.width-16 {
 .contraste #header a {
   color: #fff !important;
 }
-.contraste nav,
-.contraste nav ul,
+.contraste #navigation,
+.contraste #navigation ul,
 .contraste #header nav ul a {
   background: #333 !important;
   color: #fff !important;
@@ -253,13 +253,13 @@ div.width-16 {
   .menuTrigger {
     background: #d9d9d9 url("img/bg-menu-mobile.png") top right no-repeat;
   }
-  nav ul {
+  #navigation ul {
     display: none;
   }
-  nav.ativo ul {
+  #navigation.ativo ul {
     display: block;
   }
-  nav ul li {
+  #navigation ul li {
     display: block;
     padding: 1em;
     font-weight: bold;
