--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -4,7 +4,7 @@
 // Altere as cores principais para criar um novo tema
 
 // Basic Colors
-@main-bg: #fff;
+@main-bg: #ffffff;
 @main-text: #111111;
 @main-color: #f2f2f2;
 
@@ -89,7 +89,7 @@ body {
 #portal-title {
   margin-bottom: 25px;
 }
-nav {
+#navigation {
   .gradient-nav
 }
 #portal-globalnav {
@@ -109,7 +109,7 @@ nav {
 #portal-globalnav .selected a:hover {
     background: transparent;
 }
-nav ul {
+#navigation ul {
   line-height: 20px;
   padding: 5px 0;
   min-height: 18px;
@@ -119,12 +119,12 @@ nav ul {
   line-height: 32px !important;
   width: inherit !important;
 }
-nav li {
+#navigation li {
   margin-right: 10px;
   padding-right: 10px;
   .nav-border;
 }
-nav li.last-item {
+#navigation li.last-item {
   border-right: none;
 }
 #main {
@@ -176,7 +176,7 @@ div.width-16 {
 #footer {
   padding: 0 0 20px 0 !important;
 }
-#footer .footer-logos {
+#wrapper #footer .footer-logos {
   background: @footer;
 }
 
@@ -217,8 +217,8 @@ div.width-16 {
 .contraste #header a {
   color: #fff !important;
 }
-.contraste nav,
-.contraste nav ul,
+.contraste #navigation,
+.contraste #navigation ul,
 .contraste #header nav ul a {
   background: #333 !important;
   color: #fff !important;
@@ -262,15 +262,15 @@ div.width-16 {
       background: @header2 url("img/bg-menu-mobile.png") top right no-repeat;
     }
 
-    nav ul {
+    #navigation ul {
       display: none;
     }
 
-    nav.ativo ul {
+    #navigation.ativo ul {
       display: block;
     }
 
-    nav ul li {
+    #navigation ul li {
       display: block;
       padding: 1em;
       font-weight: bold;
