elemento <a> com ausência de texto descritivo ajuste dos links vazios acontent, anavigation e afooter para atender os critérios de acessibilidade. Alterado h1 do logo por div para acessibilidade.

--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.css
@@ -52,6 +52,12 @@ body {
   background: #5584da;
   color: #f2f2f2;
 }
+.anchor {
+    display: block;
+    font-size: 0;
+    height: 0;
+    width: 0;
+}
 #portal-siteactions {
   border-bottom: 1px dotted #2d66cf;
 }
