--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -70,7 +70,7 @@ body {
   background: lighten(@header-text, 10%);
   color: @header;
 }
-.ancora {    
+.anchor {    
     display: block;
     font-size: 0;
     height: 0;
