--- a/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
+++ b/src/brasil/gov/paginadestaque/themes/destaques-cinza/style.less
@@ -70,6 +70,12 @@ body {
   background: lighten(@header-text, 10%);
   color: @header;
 }
+.anchor {    
+    display: block;
+    font-size: 0;
+    height: 0;
+    width: 0;
+}
 #portal-siteactions {
   border-bottom: 1px dotted @header-text;
 }
